<resources>
    <string name="app_name">CryptoWatcher</string>
    <string name="searchiconaction">searchIconAction</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="_30">30</string>
    <string name="_90">90</string>
    <string name="_180">180</string>
    <string name="year">Year</string>
    <string-array name="Time">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="CurrencyFormatter">$ %s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="usd">USD</string>
    <string name="eth">ETH</string>
    <string name="btc">BTC</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sort_by">Sort By</string>
    <string name="time_frame">Time Frame</string>
    <string name="default_currency">Default Currency</string>
    <string name="order">Order</string>
    <string name="price_alert">Price Alert</string>
    <string name="change_alert">Change Alert</string>
    <string name="set_rising_price">Set rising price</string>
    <string name="falling_price">High Price</string>
    <string name="rising_price">Bottom Price</string>
    <string name="falling_change">Falling Change</string>
    <string name="rising_change">Rising Change</string>
    <string name="set_price_of_bottom_in_us_dollars">Set Price of Bottom in US Dollars</string>
    <string name="set_price_of_high_in_us_dollars">Set Price of High in US Dollars</string>
    <string name="set_percent_of_change_absolute_value">Set Percent of change (Absolute value)</string>
    <string name="absolute_change">Absolute Change</string>
</resources>
