<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/search"
        android:icon="@drawable/searchicon"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/sorticon"
        android:orderInCategory="2"
        android:title="@string/sort_by"
        app:showAsAction="always" />

    <item
        android:id="@+id/time"
        android:icon="@drawable/timeicon"
        android:orderInCategory="4"
        android:title="@string/time_frame"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/order"
        android:icon="@drawable/ordericon"
        android:orderInCategory="3"
        android:title="@string/order" />
</menu>